--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.1",
     "react": "^19.2.1",
     "lucide-react": "^0.555.0",
-    "@google/genai": "^1.31.0"
+    "@google/genai": "^1.31.0",
+    "vite": "^7.2.6",
+    "@vitejs/plugin-react": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
